[gd_scene load_steps=4 format=3 uid="uid://cs215tuynp2uh"]

[ext_resource type="Texture2D" uid="uid://c2j25fwvd2dba" path="res://icon.svg" id="1_1lghq"]
[ext_resource type="Script" path="res://Game/Player.gd" id="1_ht1kd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_726gy"]
size = Vector3(0.8, 0.8, 0.8)

[node name="Player" type="CharacterBody3D" groups=["Entity"]]
collision_layer = 16
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_ht1kd")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("BoxShape3D_726gy")

[node name="ForwardRaycast" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="Head" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="Feet" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="Side" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.5, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="Other" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.5, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="BackwardRaycast" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="Head" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Feet" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Side" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.5, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Other" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.5, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Visual" type="Node3D" parent="."]

[node name="Sprite3d" type="Sprite3D" parent="Visual"]
offset = Vector2(0, 64)
pixel_size = 0.0078
texture = ExtResource("1_1lghq")

[node name="SelfieStick" type="Node3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 0, 0)

[node name="Camera3d" type="Camera3D" parent="Visual/SelfieStick"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15)
fov = 50.0
size = 5.0

[node name="Label3d" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13678, 0.241758)
text = "hello
"
